; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-stinger.c_stinger_enum_all_sources.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-stinger.c_stinger_enum_all_sources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stinger_info = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32 (i32, i64, i8*)*, i8*)* @stinger_enum_all_sources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stinger_enum_all_sources(i8* %0, i32 (i32, i64, i8*)* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32 (i32, i64, i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.stinger_info*, align 8
  store i8* %0, i8** %4, align 8
  store i32 (i32, i64, i8*)* %1, i32 (i32, i64, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.stinger_info*
  store %struct.stinger_info* %9, %struct.stinger_info** %7, align 8
  %10 = load %struct.stinger_info*, %struct.stinger_info** %7, align 8
  %11 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %3
  %15 = load i32 (i32, i64, i8*)*, i32 (i32, i64, i8*)** %5, align 8
  %16 = load %struct.stinger_info*, %struct.stinger_info** %7, align 8
  %17 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.stinger_info*, %struct.stinger_info** %7, align 8
  %20 = getelementptr inbounds %struct.stinger_info, %struct.stinger_info* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 %15(i32 %18, i64 %21, i8* %22)
  br label %24

24:                                               ; preds = %14, %3
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
